--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,8 @@ spring:
     host: smtp.gmail.com
     port: 465
     auth: true
-    username: valerii.vasylkivskyi@gmail.com
-    password: xladik18
+    username:
+    password:
     starttls:
       enable: true
     transport:
